@@ -16,6 +16,15 @@ tree (maybe).
 
 Version 1.3.12 (In Progress)
 ============================
+05/21/2002: beazley
+            The %types directive can now be used to specify inheritance relationships
+            in the runtime type system.  For example,
+
+                %types(Foo = Bar);
+
+            specifies that Foo isa Bar.    Using this is potentially quite dangerous.
+            However, this is useful in certain cases (and in the SWIG library).
+            
 05/20/2002: beazley
             %nodefault and %makedefault directives now require a trailing semicolon.
             For example:
